# appcues-react-native-module

./: .gitignore  .whitesource  CONTRIBUTING.md  LICENSE  README.md  appcues-react-native-module.podspec  appcues-react-native-sdk.podspec  appcues-react-native.podspec  package.json  react-native.config.js  tsconfig.json
.circleci/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/appcuesreactnative/: AppcuesFrameViewManager.kt  AppcuesFrameWrapperView.kt  AppcuesReactNativeModule.kt  AppcuesReactNativePackage.kt  ReactNativeElementTargeting.kt
android/src/main/java/com/appcuesreactnativesdk/: AppcuesReactNativeSdkModule.kt  AppcuesReactNativeSdkPackage.kt
android/src/newarch/: AppcuesFrameViewManager.kt  AppcuesReactNativeSpec.kt
android/src/oldarch/: AppcuesFrameViewManager.kt  AppcuesReactNativeSpec.kt
android/src/package/73/: AppcuesReactNativePackage.kt
docs/: AnalyticObserving.md  AnchoredTooltips.md  AppcuesFrameViewConfiguring.md  CentralizedScreenTracking.md  Expo.md  ExpoBareWorkflow.md  ExpoCustomFonts.md  ExpoManagedWorkflow.md  ExpoManagedWorkflowCustomFonts.md  ExpoManagedWorkflowURLSchemeConfiguring.md  ExpoURLSchemeConfiguring.md  URLSchemeConfiguring.md  UniversalLinking.md
example/: App.js  Gemfile  README.md  app.json  package-lock.json  package.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle  google-services.json
example/android/fastlane/: Appfile  Fastfile  README.md  replace-placeholders.sh
example/components/: Button.js  FilledButton.js  PlainButton.js  Text.js  TextInput.js  TintedButton.js
example/contexts/: UserContext.js
example/ios/: .xcode.env.local  Gemfile  Podfile
example/ios/AppcuesReactNativeExample/: AppDelegate+Push.swift  AppDelegate.m  AppDelegate.mm  AppDelegate.swift  Info.plist
example/ios/AppcuesReactNativeExample.xcodeproj/: project.pbxproj
example/ios/AppcuesReactNativeExample.xcworkspace/: contents.xcworkspacedata
example/ios/AppcuesReactNativeSdkExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/AppcuesReactNativeSdkExample.xcodeproj/: project.pbxproj
example/ios/AppcuesReactNativeSdkExample.xcworkspace/: contents.xcworkspacedata
example/ios/NotificationServiceExtension/: NotificationService.swift
example/ios/fastlane/: Appfile  Fastfile  README.md  (+1 more)
example/src/: App.tsx
example/style/: AppcuesStyle.js
ios/: AppcuesFrameView.h  AppcuesFrameView.mm  AppcuesFrameViewManager.m  AppcuesFrameViewManager.mm  AppcuesFrameViewManager.swift  AppcuesFrameWrapperView.swift  AppcuesReactNative.h  AppcuesReactNative.m  AppcuesReactNative.mm  AppcuesReactNative.swift  AppcuesReactNativeSdk.m  AppcuesReactNativeSdk.swift  Implementation.swift  ReactNativeElementTargeting.swift  appcues_react_native.h
ios/AppcuesReactNative.xcodeproj/: project.pbxproj
ios/AppcuesReactNativeSdk.xcodeproj/: project.pbxproj
scripts/: release.sh  semver.sh  sync.sh
src/: AppcuesFrameViewNativeComponent.ts  NativeAppcuesReactNative.ts  index.tsx
(+40 files in other folders)
